--- a/landing page/index.html
+++ b/landing page/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
-        <title>Landing Page</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="navbar">
-            <a class="active">Header Logo</a>
-            <a href="#headerlinkone">header link one</a>
-            <a href="#headerlinktwo">header link two</a>
-            <a href="#headerlinkthree">header link three</a>
-        </div>
-        <div class="flex-container">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <button type="button">Sign up</button>
-            <img src="placeholder.jpeg" alt="Placeholder">
-        </div>
-        <div class="flex-container-1">
-            <h2>Some random information.</h2>
-            
-        </div>
-    </body>
+
+<head>
+    <title>Landing Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="navbar">
+        <a class="active">Header Logo</a>
+        <a href="#headerlinkone">header link three</a>
+        <a href="#headerlinktwo">header link two</a>
+        <a href="#headerlinkthree">header link one</a>
+    </div>
+    <br>
+    <div class="flex-container" id="open-statement">
+        <div>This website is awesome</div>
+        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+            lower contrast</div>
+        <button type="button">Sign up</button>
+    </div>
+    <img src="placeholder.jpeg" alt="Placeholder" id="image">
+    
+    <div class="flex-container-1">
+        <h2>Some random information.</h2>
+
+    </div>
+</body>
+
 </html>
